--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/gzhangx/acccnYoutubeViewCount#readme",
   "dependencies": {
+    "googleapis": "^51.0.0",
+    "lodash": "^4.17.15",
+    "restify": "^8.5.1",
     "superagent": "^5.2.2"
   }
 }
