--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "googleapis": "^51.0.0",
     "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "restify": "^8.5.1",
     "superagent": "^5.2.2"
   }
